# mlir-hello

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all.sh  build_and_run.sh  print.ll  update-llvm.sh
.github/workflows/: build.yml  nightly-build.yml
hello-opt/: CMakeLists.txt  hello-opt.cpp
hello-translate/: CMakeLists.txt  hello-translate.cpp
include/: CMakeLists.txt
include/Hello/: CMakeLists.txt  HelloDialect.h  HelloDialect.td  HelloOps.h  HelloOps.td  HelloPasses.h
include/Sample/: CMakeLists.txt  SampleDialect.h  SampleDialect.td  SampleOps.h  SampleOps.td  SamplePasses.h
lib/Hello/: CMakeLists.txt  HelloDialect.cpp  HelloOps.cpp  LowerToAffine.cpp  LowerToLLVM.cpp  LowerToMemref.cpp
lib/Sample/: CMakeLists.txt  LowerToAffine.cpp  LowerToLLVM.cpp  SampleDialect.cpp  SampleOps.cpp
sample-opt/: CMakeLists.txt  sample-opt.cpp
sample-translate/: CMakeLists.txt  sample-translate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Hello/: affine.mlir  dummy.mlir  hello_world.mlir  loop-tiling.mlir  main.mlir  parallel.mlir  print.mlir  sample-opt.mlir  sample-translate.mlir  single-loop-with-affine-map.mlir  single-loop.mlir
test/Sample/: dummy.mlir  print.mlir  sample-opt.mlir  sample-translate.mlir  test.mlir
